ADD header and main

--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,23 @@
     padding: 0px;
     box-sizing: border-box;
 }
+
+/* App */
+.app {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Header */
+.main-header {
+    background-color: var(--green);
+    height: 150px;
+    flex-shrink: 0;
+}
+
+/* Main */
+.main-content {
+    background-color: var(--first-white);
+    flex-grow: 1;
+}
