--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Container */
@@ -55,6 +56,28 @@
 .chat {
     width: 560px;
 }
+
+/* Profilo */
+.profile {
+    background-color: var(--second-grey);
+    padding: 10px;
+}
+
+/* Informazioni del profilo */
+.profile__info {
+    display: flex;
+    align-items: center;
+}
+
+/* Immagine del profilo */
+.profile__info--img img {
+    width: 50px;
+    aspect-ratio: 1;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 999px;
+}
+
 
 /* Conversazione */
 .conversation {
