--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,10 @@
 /* Profilo */
 .profile {
     background-color: var(--second-grey);
-    padding: 10px;
+    padding: 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 /* Informazioni del profilo */
@@ -78,6 +81,13 @@
     border-radius: 999px;
 }
 
+/* Azioni del profilo */
+.profile__actions {
+    color: var(--first-grey);
+    font-size: 22px;
+    display: flex;
+    gap: 15px;
+}
 
 /* Conversazione */
 .conversation {
