REFACTOR names of the classes "sent" and "received"

--- a/css/style.css
+++ b/css/style.css
@@ -329,13 +329,13 @@ body {
 }
 
 /* Mittente */
-.sender {
+.sent {
     background-color: var(--lime);
     align-self: flex-end;
 }
 
 /* Destinatario */
-.receiver {
+.received {
     background-color: white;
     align-self: flex-start;
 }
