--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,12 @@
 /* Regole generali */
 :root {
     --green: #009688;
-    --lime: #D5F9BA;
-    --light-blue: #8EDAFC;
     --first-white: #D8DBD5;
-    --second-white: #E9EBEB;
-    --first-grey: #B1B1B1;
-    --second-grey: #EAEAEA;
-    --light-black: #6B7376;
+    --second-white: #EAEAEA;
+    --grey: #E9EBEB;
+    --light-blue: #8EDAFC;
+    --lime: #D5F9BA;
+    --light-black: #6F7273;
     --dust: #E5DDD5;
 }
 
@@ -20,6 +19,10 @@
 
 ul, ol, menu {
     list-style-type: none;
+}
+
+img {
+    display: block;
 }
 
 /* Container */
@@ -66,7 +69,7 @@ body {
 /* Profilo */
 .profile {
     flex-shrink: 0;
-    background-color: var(--second-grey);
+    background-color: var(--second-white);
     padding: 10px 15px;
     height: 75px;
     display: flex;
@@ -91,7 +94,7 @@ body {
 
 /* Azioni del profilo */
 .profile__actions {
-    color: var(--first-grey);
+    color: var(--light-black);
     font-size: 22px;
     display: flex;
     gap: 20px;
@@ -144,15 +147,15 @@ body {
     width: 75px;
     font-size: 16px;
     background-color: white;
-    color: var(--first-grey);
-    border: 1px solid var(--first-grey);
+    color: var(--light-black);
+    border: 1px solid var(--light-black);
 }
 
 /* Input della barra di ricerca */
 .search__bar--input {
     font-size: 14px;
     padding: 10px;
-    border: 1px solid var(--first-grey);
+    border: 1px solid var(--light-black);
     flex-grow: 1;
 }
 
@@ -165,12 +168,12 @@ body {
 
 /* Elemento della lista dei messaggi */
 .list-item {
-    border-bottom: 1px solid var(--first-grey);
+    border-bottom: 1px solid var(--light-black);
 }
 
 /* Classe per la chat attiva */
 .active {
-    background-color: var(--first-white);
+    background-color: var(--grey);
 }
 
 /* Carta */
@@ -179,6 +182,11 @@ body {
     display: flex;
     gap: 20px;
     cursor: pointer;
+}
+
+/* Hover della carta */
+.card:hover {
+    background-color: var(--grey);
 }
 
 /* Immagine della carta */
@@ -203,13 +211,13 @@ body {
 /* Testo della carta */
 .card__info--text {
     font-size: 14px;
-    color: var(--first-grey);
+    color: var(--light-black);
 }
 
 /* Tempo della carta */
 .card__time {
     font-size: 14px;
-    color: var(--first-grey);
+    color: var(--light-black);
 }
 
 /* Conversazione */
@@ -221,7 +229,7 @@ body {
 
 /* Testa della conversazione */
 .conversation__head {
-    background-color: var(--second-grey);
+    background-color: var(--second-white);
     padding: 10px 15px;
     height: 75px;
     display: flex;
@@ -253,7 +261,7 @@ body {
 
 /* Azioni della conversazione */
 .conversation__head--actions {
-    color: var(--first-grey);
+    color: var(--light-black);
     font-size: 22px;
     display: flex;
     gap: 20px;
@@ -350,7 +358,7 @@ body {
 
 /* Piede della conversazione */
 .conversation__footer {
-    background-color: var(--second-grey);
+    background-color: var(--second-white);
     padding: 10px 40px;
     display: flex;
     gap: 40px;
